--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="logo navbar-brand"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="white" class="bi bi-building-gear" viewBox="0 0 16 16">
+            <a aria-label="Logo" class="logo navbar-brand"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="white" class="bi bi-building-gear" viewBox="0 0 16 16">
                 <path d="M2 1a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v6.5a.5.5 0 0 1-1 0V1H3v14h3v-2.5a.5.5 0 0 1 .5-.5H8v4H3a1 1 0 0 1-1-1z"/>
                 <path d="M4.5 2a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm-6 3a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm-6 3a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm4.386 1.46c.18-.613 1.048-.613 1.229 0l.043.148a.64.64 0 0 0 .921.382l.136-.074c.561-.306 1.175.308.87.869l-.075.136a.64.64 0 0 0 .382.92l.149.045c.612.18.612 1.048 0 1.229l-.15.043a.64.64 0 0 0-.38.921l.074.136c.305.561-.309 1.175-.87.87l-.136-.075a.64.64 0 0 0-.92.382l-.045.149c-.18.612-1.048.612-1.229 0l-.043-.15a.64.64 0 0 0-.921-.38l-.136.074c-.561.305-1.175-.309-.87-.87l.075-.136a.64.64 0 0 0-.382-.92l-.148-.045c-.613-.18-.613-1.048 0-1.229l.148-.043a.64.64 0 0 0 .382-.921l-.074-.136c-.306-.561.308-1.175.869-.87l.136.075a.64.64 0 0 0 .92-.382zM14 12.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0"/>
               </svg>
@@ -34,24 +34,24 @@
                         <a class="nav-link text-white" href="#">BSB 802 126</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link text-white" href="#"><i class="bi bi-house-lock"></i> eStatement Login</a>
+                        <a class="nav-link text-white" href="#" aria-label="eStatement Login"><i class="bi bi-house-lock"></i> eStatement Login</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link text-white" href="#"><i class="bi bi-house-lock"></i> Internet Banking</a>
+                          <a class="nav-link text-white" href="#" aria-label="Internet Banking"><i class="bi bi-house-lock"></i> Internet Banking</a>
                         </li>
                 </div>
                 <div class="nav-links-container">   
                   <li class="nav-item active">
-                    <a class="nav-link text-white" href="#">Loans</span></a>
+                    <a class="nav-link text-white" href="#" aria-label="Loans">Loans</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Banking</a>
+                    <a class="nav-link text-white" href="#" aria-label="Banking">Banking</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link text-white" href="#">Why Macquarie?</a>
+                      <a class="nav-link text-white" href="#" aria-label="Why Macquarie?">Why Macquarie?</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link text-white" href="#">Support</a>
+                      <a class="nav-link text-white" href="#" aria-label="Support">Support</a>
                   </li> 
                 </div> 
               </ul>
@@ -144,7 +144,7 @@
                   </div>
                 <div class="item social-feed">
                     <h4>Social Feed</h4>
-                    <iframe src='https://www.juicer.io/api/feeds/williamhgates-03175573-164e-40a5-ba51-b3ef17a56597/iframe' frameborder='0' width='400' height='300' style='display:block;margin:0 auto;'></iframe>
+                    <iframe title="Social Feed Linkedin" src='https://www.juicer.io/api/feeds/williamhgates-03175573-164e-40a5-ba51-b3ef17a56597/iframe' frameborder='0' width='400' height='300' style='display:block;margin:0 auto;'></iframe>
                 </div>
                 <div class="item community-support">
                     <div class="overlay-image"></div>
@@ -200,15 +200,15 @@
         <div class="footer-content-2">
             <div class="footer-left">
                 <div class="social-icons">
-                    <a href="#"><i class="bi bi-facebook"></i></a>
-                    <a href="#"><i class="bi bi-instagram"></i></a>
-                    <a href="#"><i class="bi bi-telephone-fill"></i></a>
+                    <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+                    <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+                    <a href="#" aria-label="Contact us"><i class="bi bi-telephone-fill"></i></a>
                 </div>                
               <ul class="footer-links">
-                <li><a href="#">Privacy</a></li>
-                <li><a href="#">Security</a></li>
-                <li><a href="#">Disclosure Documents</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#" aria-label="Privacy">Privacy</a></li>
+                <li><a href="#" aria-label="Security">Security</a></li>
+                <li><a href="#" aria-label="Disclosure Documents">Disclosure Documents</a></li>
+                <li><a href="#" aria-label="Contact Us">Contact Us</a></li>
               </ul>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               <div class="logo">
