--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </button>
           
             <div class="collapse navbar-collapse navbar-menu" id="navbarSupportedContent">
-              <ul class="navbar-nav nav-links">
-                <div class="nav-links-container">   
+              <div class="navbar-nav nav-links">
+                <ul class="nav-links-container">   
                     <li class="nav-item active">
                         <a class="nav-link text-white" href="#">BSB 802 126</a>
                       </li>
@@ -39,8 +39,8 @@
                       <li class="nav-item">
                           <a class="nav-link text-white" href="#" aria-label="Internet Banking"><i class="bi bi-house-lock"></i> Internet Banking</a>
                         </li>
-                </div>
-                <div class="nav-links-container">   
+                </ul>
+                <ul class="nav-links-container">   
                   <li class="nav-item active">
                     <a class="nav-link text-white" href="#" aria-label="Loans">Loans</span></a>
                   </li>
@@ -53,8 +53,8 @@
                   <li class="nav-item">
                       <a class="nav-link text-white" href="#" aria-label="Support">Support</a>
                   </li> 
-                </div> 
-              </ul>
+                </ul> 
+            </div>
             </div>
           </nav>
     </header>
@@ -86,7 +86,7 @@
     <section class="main-content">
         <div class="content-1 container">
             <div class="promo-campaign">
-                <h4 class="text-center w-100">Promotional campaign</h4>
+                <p class="text-center w-100">Promotional campaign</p>
                 <button>Learn more</button>
             </div>
             <div id="newsCarousel" class="news-carousel carousel slide" data-ride="carousel">
