--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a aria-label="Logo" class="logo navbar-brand"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="white" class="bi bi-building-gear" viewBox="0 0 16 16">
+            <a class="logo navbar-brand"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="white" class="bi bi-building-gear" viewBox="0 0 16 16">
                 <path d="M2 1a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v6.5a.5.5 0 0 1-1 0V1H3v14h3v-2.5a.5.5 0 0 1 .5-.5H8v4H3a1 1 0 0 1-1-1z"/>
                 <path d="M4.5 2a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm-6 3a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm-6 3a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm4.386 1.46c.18-.613 1.048-.613 1.229 0l.043.148a.64.64 0 0 0 .921.382l.136-.074c.561-.306 1.175.308.87.869l-.075.136a.64.64 0 0 0 .382.92l.149.045c.612.18.612 1.048 0 1.229l-.15.043a.64.64 0 0 0-.38.921l.074.136c.305.561-.309 1.175-.87.87l-.136-.075a.64.64 0 0 0-.92.382l-.045.149c-.18.612-1.048.612-1.229 0l-.043-.15a.64.64 0 0 0-.921-.38l-.136.074c-.561.305-1.175-.309-.87-.87l.075-.136a.64.64 0 0 0-.382-.92l-.148-.045c-.613-.18-.613-1.048 0-1.229l.148-.043a.64.64 0 0 0 .382-.921l-.074-.136c-.306-.561.308-1.175.869-.87l.136.075a.64.64 0 0 0 .92-.382zM14 12.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0"/>
               </svg>
@@ -62,13 +62,13 @@
     <section class="sidenavbar">
         <nav class="sidebar">
             <ul>
-                <li><a href="#"><i class="bi bi-mouse"></i><p>Apply Online</p></a></li>
-                <li><a href="#"><i class="bi bi-geo"></i><p>Locate Us</p></a></li>
-                <li><a href="#"><i class="bi bi-calculator"></i><p>Calculators</p></a></li>
-                <li><a href="#"><i class="bi bi-bar-chart"></i><p>Rates & Fees</p></a></li>
-                <li><a href="#"><i class="bi bi-cash-coin"></i><p>Savings</p></a></li>
-                <li><a href="#"><i class="bi bi-file-earmark-medical"></i><p>Insurance</p></a></li>
-                <li><a href="#"><i class="bi bi-telephone"></i><p>Contact us</p></a></li>
+                <li><a href="#" aria-label="Apply online"><i class="bi bi-mouse"></i><p>Apply Online</p></a></li>
+                <li><a href="#" aria-label="Locate us"><i class="bi bi-geo"></i><p>Locate Us</p></a></li>
+                <li><a href="#" aria-label="Calculators"><i class="bi bi-calculator"></i><p>Calculators</p></a></li>
+                <li><a href="#" aria-label="Rates"><i class="bi bi-bar-chart"></i><p>Rates & Fees</p></a></li>
+                <li><a href="#" aria-label="Savings"><i class="bi bi-cash-coin"></i><p>Savings</p></a></li>
+                <li><a href="#" aria-label="Insurance"><i class="bi bi-file-earmark-medical"></i><p>Insurance</p></a></li>
+                <li><a href="#" aria-label="Contact us"><i class="bi bi-telephone"></i><p>Contact us</p></a></li>
             </ul>
         </nav>
     </section>
@@ -102,21 +102,21 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active" style="background-image: url('./images/slide1.png');">
                         <div class="carousel-item-content">
-                            <h4>Latest news at Macquarie</h4>
+                            <p class="title-slide">Latest news at Macquarie</p>
                             <p>To find out more please click button below</p>
                             <button>Learn more</button>
                         </div>
                     </div>
                     <div class="carousel-item" style="background-image: url('./images/slide2.png');">
                         <div class="carousel-item-content">
-                            <h4>Latest news at Macquarie</h4>
+                            <p class="title-slide">Latest news at Macquarie</p>
                             <p>To find out more please click button below</p>
                             <button>Learn more</button>
                         </div>
                     </div>
                     <div class="carousel-item" style="background-image: url('./images/slide3.png');">
                         <div class="carousel-item-content">
-                            <h4>Latest news at Macquarie</h4>
+                            <p class="title-slide">Latest news at Macquarie</p>
                             <p>To find out more please click button below</p>
                             <button>Learn more</button>
                         </div>
