--- a/index.html
+++ b/index.html
@@ -100,21 +100,21 @@
                 
                 <!-- The slideshow -->
                 <div class="carousel-inner">
-                    <div class="carousel-item active" style="background-image: url('./images/slide1.png');">
+                    <div class="carousel-item active" style="background-image: url('./images/slide1.webp');">
                         <div class="carousel-item-content">
                             <p class="title-slide">Latest news at Macquarie</p>
                             <p>To find out more please click button below</p>
                             <button>Learn more</button>
                         </div>
                     </div>
-                    <div class="carousel-item" style="background-image: url('./images/slide2.png');">
+                    <div class="carousel-item" style="background-image: url('./images/slide2.webp');">
                         <div class="carousel-item-content">
                             <p class="title-slide">Latest news at Macquarie</p>
                             <p>To find out more please click button below</p>
                             <button>Learn more</button>
                         </div>
                     </div>
-                    <div class="carousel-item" style="background-image: url('./images/slide3.png');">
+                    <div class="carousel-item" style="background-image: url('./images/slide3.webp');">
                         <div class="carousel-item-content">
                             <p class="title-slide">Latest news at Macquarie</p>
                             <p>To find out more please click button below</p>
